--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1668,107 +1668,107 @@ stories:
   domain: http://www.times-news.com/
   link: https://www.times-news.com/community/living-word-lutheran-youth-perform-annual-christmas-pageant/image_daf0ea64-9e69-5c32-8648-83c68a4d0023.html
 images:
-- name: machine-road-machine-road-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-deep-connections.jpg
-- name: ellis-island-ellisisland-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-electricity.jpg
-- name: rain-princess-border-fence-down-the-line-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-fence-down-the-line-2.jpg
-- name: san-francisco-street-view-san-francisco-street-view-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-gan-vogh.jpg
-- name: downtown-trucksilo-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-neo-instinct.jpg
-- name: containership-containership-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-free-woman.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-5.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-5.png
-- name: san-francisco-city-bridge-sf-city-bridge-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-smooth-ride.jpg
-- name: store-on-corner-store-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-sunday.jpg
-- name: nazi-invasion-cemetery_36690406946_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-cemetery_36690406946_o.jpg
-- name: store-on-corner-oldcabin-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-marcel-duchamp.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dark-soul.jpg
-- name: sand-hand-sand-hand-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-alien-goggles.jpg
-- name: gypsy-wagon-gypsywagon-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-colored-circuits.jpg
-- name: hollywood-building-hollywood-building-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-kand-two.jpg
-- name: old-granary-field-oldhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-gan-vogh.jpg
-- name: old-granary-field-oldhouse-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crunch-paper.jpg
-- name: carry-load-carryload-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kandinsky-bv.jpg
-- name: hollywood-building-hollywood-building-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-green-zuma.jpg
-- name: white-house-lawn-white-house-window-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-pablo-blue.jpg
-- name: oldsmallboat-oldsmallboat-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-atari-asteroids.jpg
-- name: razorcliff-razorcliff-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-soul.jpg
-- name: christianity-christianity-under-construction-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-4.jpg
-- name: amusement-park-amusement-park-2-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-clean-view.jpg
-- name: berlinwall2-berlinwall-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-light-dali.jpg
-- name: blossombar-far-away-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-24-99.jpg
-- name: stalin-time-chess-in-the-park-with-pigeons.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-chess-in-the-park-with-pigeons.jpg
-- name: ellis-island-ellis-island-room-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gan-vogh.jpg
-- name: oldhouse-granaryfield-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-kandinsky-bv.jpg
-- name: mosaic-face-mosaic-face-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-constitution.jpg
-- name: oldcabin-oldcabin-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-constitution.jpg
-- name: bordercrossing-bordercrossing-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-spagetti-accident.jpg
-- name: beach-rocks-beach-rocks-currents-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-atari-asteroids.jpg
-- name: oldhouse-granaryfield-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-sunday.jpg
-- name: oldsmallboat-oldsmallboat-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-satan-red.jpg
-- name: statue-of-liberty-front-view-statueofliberty-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-umberto-bocc.jpg
-- name: oldroad-old-road-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-yellow-paper.jpg
-- name: beach-clouds-lifeguard-beachclouds-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purp-paper.jpg
-- name: old-gas-pumps-oldgaspumps-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-wols.jpg
-- name: containership-containership-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-electricity.jpg
-- name: lincoln-memorial-lincolnmemorial-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-electricity.jpg
-- name: windowmountain-window-mountain-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-crafty-painting.jpg
-- name: blossombar-dry-skin-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dry-skin-file-00-00-00-00.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
-- name: rain-princess-IMG_8293.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8293.jpg
-- name: old-cabin-oldcabin-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-graham-sutherland.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dry-skin.jpg
-- name: abandonedbuildings_dali_two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dali_two.jpg
-- name: birdhouse-birdhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-brush.jpg
-- name: copper-circuit-hallway-mirrors-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-hallway-mirrors-hotel.jpg
-- name: window-window-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-emily-carr.jpg
+- name: supreme-court-supremecourt-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-umberto-bocc.jpg
+- name: bordercrossing-bordercrossing-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-creativity.jpg
+- name: eduardo-eduardo-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-wols.jpg
+- name: beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-internet-numbers.jpg
+- name: oldcabin-store-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-post-modern.jpg
+- name: copper-circuit-subway-brooklyn-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-subway-brooklyn-station.jpg
+- name: trucksilo-trucksilo-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-cinnamon-rolls.jpg
+- name: razorwire-DSC-0080-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-aqua.jpg
+- name: old-school-house-old-schoolhouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colorful-blocks.jpg
+- name: oldhouse-oldhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-circuit.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-kandinsky-bv.jpg
+- name: server-cloud-server-racks-clouds-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-collage.jpg
+- name: liberty-back-statue-liberty-back-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-post-modern.jpg
+- name: white-house-lawn-white-house-window-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-diego-rivera1.jpg
+- name: adam-smith-adam-smith-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-atari-asteroids.jpg
+- name: nazi-invasion-water-fountain-many-shooting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-water-fountain-many-shooting.jpg
+- name: capital-battle-capitolbattle-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-gan-vogh.jpg
+- name: la-muse-border-fence-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-border-fence-down-the-line.jpg
+- name: birdhouse-birdhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-light-dali.jpg
+- name: yosemite-yosemite-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-graham-sutherland.jpg
+- name: la-muse-dark-city-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dark-city-buildings.jpg
+- name: dc-statue-dcstatue-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-mucha-mult.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sunday.jpg
+- name: blossombar-sunday-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-sunday-file-00-00-24-99.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sunday.jpg
+- name: christianity-christianity-under-construction-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-sunday.jpg
+- name: store-on-corner-oldcabin-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purple-pond.jpg
+- name: bf-skinner-boats-waterfront-bristol.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-boats-waterfront-bristol.jpg
+- name: white-house-lawn-white-house-lawn-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-crabapple.jpg
+- name: white-house-lawn-white-house-window-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-purple-pond.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-ww2-color.jpg
+- name: curtain-curtain-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-purple-pond.jpg
+- name: udnie-IMG_8358.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8358.jpg
+- name: braceros-domingo-ulloa-adam-smith-edinburgh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-adam-smith-edinburgh.jpg
+- name: hollywood-building-hollywood-building-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit-3.jpg
+- name: legal-statue-legalstatue-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-bright-sand.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-collage.jpg
+- name: mistywoods-babyfoot-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-pablo-blue.jpg
+- name: powerlines-power-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-circuit.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-space-pizza.JPG
+- name: nazi-invasion-old-building-and-cars_36680898846_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-building-and-cars_36680898846_o.jpg
+- name: flower-barbed-wire-flower-barbed-wire-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-atari-missle.jpg
+- name: subway-subway-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-post-modern.jpg
+- name: victoria-victoria-corner-hotel-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-attack-planes.jpg
+- name: adam-smith-adam-smith-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-spagetti-accident.jpg
+- name: christianity-christianity-under-construction-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-smooth-ride.jpg
+- name: downtown-los-angeles-downtown-la-horiz-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-horiz-circuit.JPG
+- name: walled-garden-walled-garden-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-granite.jpg
+- name: downtheline-downtheline-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-clean-view.jpg
+- name: oldcabin-oldcabin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-rainbow-festival.jpg
+- name: old-cabin-oldcabin-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-mucha-mult.jpg
 ---
 Prompt Care Was Key To Sanders' Recovery From Heart Attack.&nbsp;Ellie Goulding Teases Fourth Album Is Coming This Year.&nbsp;Six Arrested In Prostitution Sting.&nbsp;Blackface Again Mars Philadelphia's Troubled New Year Parade.&nbsp;Family Of Hanukkah Attack Victim Calls For End Of Hatred.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;Nappy Roots At The Black Sheep Show Preview.&nbsp;West Point's Brownlee, Cherry Sign With Southern Mississippi.&nbsp;
